--- a/setup.cfg
+++ b/setup.cfg
@@ -13,8 +13,8 @@ cover-tests=1
 cover-package=imageserver
 
 [bdist_rpm]
-build-requires=python-setuptools,postgresql-devel,ImageMagick-devel
-requires=memcached,postgresql-server,mod_wsgi,httpd,ImageMagick,policycoreutils-python,ghostscript
+build-requires=python-setuptools,postgresql-devel,ImageMagick-devel,libmemcached-devel
+requires=memcached,postgresql-server,mod_wsgi,httpd,ImageMagick,policycoreutils-python,ghostscript,libmemcached
 bdist-base=/tmp
 
 [flake8]
