--- a/deploy/rhel6.5/httpd.conf.sample
+++ b/deploy/rhel6.5/httpd.conf.sample
@@ -7,7 +7,7 @@
     # ServerAlias images
 
     # Request: host, time, requested path
-    # Response: status code, content length, seconds (in app), microseconds (in total), image from cache
+    # Response: status code, content length, microseconds (in app), microseconds (in total), image from cache
     # Extra: browser/agent, web page or request origin
     LogFormat "%h %t \"%r\" %>s %B %{X-Time-Taken}o %D %{X-From-Cache}o \"%{User-Agent}i\" \"%{Referer}i\"" imaging
 
