--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,14 +1,14 @@
 # QIS Python Requirements
 Flask==0.10.1
-python-ldap>=2.4.13
-pylibmc==1.4.2
-psycopg2==2.5.5
-SQLAlchemy==1.0.8
-requests==2.5.1
+python-ldap==2.4.27
+pylibmc==1.5.1
+psycopg2==2.6.2
+SQLAlchemy==1.0.15
+requests==2.11.1
 psutil==2.2.1
 itsdangerous==0.24
 importlib
-markdown==2.6.2
+markdown==2.6.6
 
 # Additional requirements for setup / unit tests
 #wheel
