Migrate postgres dockerfile to Ubuntu / Docker 1.12

--- a/deploy/docker/memcached/Dockerfile
+++ b/deploy/docker/memcached/Dockerfile
@@ -8,17 +8,16 @@
 FROM ubuntu:16.04
 MAINTAINER Matt Fozard <matt@quru.com>
 
-# Base o/s layer
-RUN apt-get update && apt-get upgrade && apt-get clean
-
-# App layer
-RUN apt-get install -y memcached && apt-get clean
+# Base o/s + app layer
+RUN apt-get update && \
+    apt-get install -y memcached && \
+    apt-get clean
 
 # Ports
 EXPOSE 11211
 
 # Environment variables
-ENV MEMCACHED_SIZE 512
+ENV MEMCACHED_SIZE=512
 
 # Command
 CMD /usr/bin/memcached -u memcache -m $MEMCACHED_SIZE
