Remove development files from Docker deployment

--- a/deploy/docker/qis-as/Dockerfile
+++ b/deploy/docker/qis-as/Dockerfile
@@ -74,6 +74,7 @@ RUN cd /tmp && \
     cp -r images $QIS_INSTALL_DIR && \
     cp -r licences $QIS_INSTALL_DIR && \
     cp -r logs $QIS_INSTALL_DIR && \
+    rm -rf src/tests src/*.sh src/runserver.py && \
     cp -r src $QIS_INSTALL_DIR && \
     cp deploy/ubuntu14/wsgi.conf /etc/apache2/sites-available/qis-wsgi.conf && \
     cp deploy/ubuntu14/httpd.conf.sample /etc/apache2/sites-available/001-qis.conf && \
