Document devel packages, fixes to unit test config

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,4 @@
 [nosetests]
-tests=src
 tests=tests
 verbosity=2
 detailed-errors=1
@@ -13,8 +12,8 @@ cover-tests=1
 cover-package=imageserver
 
 [bdist_rpm]
-build-requires=python-setuptools,postgresql-devel,ImageMagick-devel,libmemcached-devel
-requires=memcached,postgresql-server,mod_wsgi,httpd,ImageMagick,policycoreutils-python,ghostscript,libmemcached
+build-requires=python-setuptools,postgresql-devel,libmemcached-devel,openldap-devel
+requires=memcached,postgresql-server,mod_wsgi,httpd,ImageMagick,policycoreutils-python,ghostscript,libmemcached,openldap,openssl
 bdist-base=/tmp
 
 [flake8]
