CI builds - use latest ImageMagick binaries

--- a/deploy/docker/ci-build-centos-7/Dockerfile
+++ b/deploy/docker/ci-build-centos-7/Dockerfile
@@ -6,6 +6,13 @@ FROM centos:7.4.1708
 
 MAINTAINER Matt Fozard <matt@quru.com>
 
+# Build variables
+ARG BUILD_USER=build
+ARG IM_VERSION=6.9.9-25
+# This should contain a public key (the actual key, not a filename) that is
+# allowed to log in via SSH. Pass this in as a build argument.
+ARG AUTHORIZED_KEY
+
 # Install the EPEL repo
 RUN yum -y install epel-release
 
@@ -18,11 +25,13 @@ RUN yum install -y sudo curl wget man git make gcc gcc-c++ sed mlocate \
 RUN easy_install pip
 RUN pip install wheel
 
-# Build variables
-ARG BUILD_USER=build
-# This should contain a public key (the actual key, not a filename) that is
-# allowed to log in via SSH. Pass this in as a build argument.
-ARG AUTHORIZED_KEY
+# Install ImageMagick devel from RPMs (as the CentOS 7 package is a buggy release)
+RUN wget -P /tmp "https://quru.com/static2/ImageMagick-$IM_VERSION.x86_64.rpm" && \
+    wget -P /tmp "https://quru.com/static2/ImageMagick-devel-$IM_VERSION.x86_64.rpm" && \
+    wget -P /tmp "https://quru.com/static2/ImageMagick-libs-$IM_VERSION.x86_64.rpm"
+RUN yum install -y /tmp/ImageMagick-libs-$IM_VERSION.x86_64.rpm
+RUN yum install -y /tmp/ImageMagick-$IM_VERSION.x86_64.rpm
+RUN yum install -y /tmp/ImageMagick-devel-$IM_VERSION.x86_64.rpm
 
 # Create a user for building and running stuff
 RUN groupadd --gid 1001 $BUILD_USER && \
