Makes the images a bit smaller

--- a/deploy/docker/ci-build-rhel-7/Dockerfile
+++ b/deploy/docker/ci-build-rhel-7/Dockerfile
@@ -51,9 +51,9 @@ RUN pip install wheel
 RUN wget -P /tmp "https://quru.com/static2/imagemagick/ImageMagick-$IM_VERSION.x86_64.rpm" && \
     wget -P /tmp "https://quru.com/static2/imagemagick/ImageMagick-devel-$IM_VERSION.x86_64.rpm" && \
     wget -P /tmp "https://quru.com/static2/imagemagick/ImageMagick-libs-$IM_VERSION.x86_64.rpm"
-RUN yum install -y /tmp/ImageMagick-libs-$IM_VERSION.x86_64.rpm
-RUN yum install -y /tmp/ImageMagick-$IM_VERSION.x86_64.rpm
-RUN yum install -y /tmp/ImageMagick-devel-$IM_VERSION.x86_64.rpm
+RUN yum install -y /tmp/ImageMagick-libs-$IM_VERSION.x86_64.rpm && yum clean all
+RUN yum install -y /tmp/ImageMagick-$IM_VERSION.x86_64.rpm && yum clean all
+RUN yum install -y /tmp/ImageMagick-devel-$IM_VERSION.x86_64.rpm && yum clean all
 
 # Create a user for building and running stuff
 RUN groupadd --gid 1001 $BUILD_USER && \
