Fix sudoers, set env vars for all users

--- a/deploy/docker/ci-build-ubuntu-16/Dockerfile
+++ b/deploy/docker/ci-build-ubuntu-16/Dockerfile
@@ -29,14 +29,15 @@ RUN apt-get update && \
 RUN pip install -U pip virtualenv
 
 # Add libmagickwand env vars
-ENV C_INCLUDE_PATH=/usr/include/x86_64-linux-gnu/ImageMagick-6:/usr/include/ImageMagick-6 \
-    LIBRARY_PATH=/usr/lib/x86_64-linux-gnu \
-    PATH=$PATH:/usr/lib/x86_64-linux-gnu/ImageMagick-6.8.9/bin-Q16
+RUN echo "export C_INCLUDE_PATH=$C_INCLUDE_PATH:/usr/include/x86_64-linux-gnu/ImageMagick-6:/usr/include/ImageMagick-6" >> /etc/profile.d/libmagickwand-dev.sh
+RUN echo "export LIBRARY_PATH=$LIBRARY_PATH:/usr/lib/x86_64-linux-gnu" >> /etc/profile.d/libmagickwand-dev.sh
+RUN echo "export PATH=$PATH:/usr/lib/x86_64-linux-gnu/ImageMagick-6.8.9/bin-Q16" >> /etc/profile.d/libmagickwand-dev.sh
+RUN chmod a+x /etc/profile.d/libmagickwand-dev.sh
 
 # Create a user for building and running stuff
 RUN groupadd --gid 1001 $BUILD_USER && \
     useradd --uid 1001 --gid 1001 --groups sudo --create-home --shell /bin/bash $BUILD_USER
-RUN sed -r -i 's/%sudo\s+ALL=\(ALL:ALL\)\s+ALL/%sudo    ALL=(ALL:ALL) ALL    NOPASSWD: ALL/g' /etc/sudoers
+RUN sed -r -i 's/%sudo\s+ALL=\(ALL:ALL\)\s+ALL/%sudo  ALL=(ALL:ALL)  NOPASSWD: ALL/g' /etc/sudoers
 
 # Install an authorized key for logging in as the build user
 USER $BUILD_USER
