Tidy up the build
Have everything run through make from the project dir.
Use a virtualenv in the project dir.
Remove things from the sdist that weren’t needed, add missing doc
images.
Put all helper scripts into src.

--- a/.gitignore
+++ b/.gitignore
@@ -20,17 +20,15 @@ lib/python*
 logs/*.log
 logs/*.log.*
 bin
-./build
-man
-qismagick/src/Debug
-qismagick/src/Release
-qismagick/dist/
+build
+dist
 images/*
 !images/test_images
 images/test_images/.DS_Store
 images/test_images/pdftest.pdf.d
 .coverage
 src/coverage.xml
+src/flake8.txt
 .#*
 #*
 *~
