--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,18 @@
 include conf/README
 recursive-include deploy *
-include doc/*
-include icc/*.ic*
+prune deploy/docker/ci-build-centos-7
+prune deploy/docker/ci-build-rhel-7
+prune deploy/docker/ci-build-ubuntu-16
+recursive-include doc *
+prune doc/v0
+prune doc/v1
+prune doc/v2
+graft icc
 graft images/test_images
-include licences/*
+graft licences
 include logs/README
 recursive-include src/imageserver *.css *.js *.png *.gif *.bmp *.ico *.jpg *.jpeg *.sass *.scss *.html *.htm *.txt *.sh
-recursive-exclude src/tests *
-include src/wsgi/*
+recursive-include src/wsgi *
+include README.md
 exclude MANIFEST.in
+global-exclude .DS_Store
