Explicitly disable .htaccess files (is the default on Apache 2.4 anyway)

--- a/deploy/centos7/httpd.conf.sample
+++ b/deploy/centos7/httpd.conf.sample
@@ -35,22 +35,26 @@
     WSGIImportScript /opt/qis/src/wsgi/runserver.wsgi process-group=qis application-group=qis
 
     <Directory /opt/qis/src/wsgi>
+        AllowOverride None
         Require all granted
     </Directory>
 
     <Directory /opt/qis/src/imageserver/static>
         ExpiresActive On
         ExpiresDefault "access plus 7 days"
+        AllowOverride None
         Require all granted
     </Directory>
     <Directory /opt/qis/src/imageserver/admin/static>
         ExpiresActive On
         ExpiresDefault "access plus 7 days"
+        AllowOverride None
         Require all granted
     </Directory>
     <Directory /opt/qis/src/imageserver/reports/static>
         ExpiresActive On
         ExpiresDefault "access plus 7 days"
+        AllowOverride None
         Require all granted
     </Directory>
 
