--- a/deploy/centos7/httpd-ssl.conf.sample
+++ b/deploy/centos7/httpd-ssl.conf.sample
@@ -38,22 +38,26 @@
     WSGIPassAuthorization On
 
     <Directory /opt/qis/src/wsgi>
+        AllowOverride None
         Require all granted
     </Directory>
 
     <Directory /opt/qis/src/imageserver/static>
         ExpiresActive On
         ExpiresDefault "access plus 7 days"
+        AllowOverride None
         Require all granted
     </Directory>
     <Directory /opt/qis/src/imageserver/admin/static>
         ExpiresActive On
         ExpiresDefault "access plus 7 days"
+        AllowOverride None
         Require all granted
     </Directory>
     <Directory /opt/qis/src/imageserver/reports/static>
         ExpiresActive On
         ExpiresDefault "access plus 7 days"
+        AllowOverride None
         Require all granted
     </Directory>
 
