--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 .settings
+.coverage
 .eggs
 .project
 .pydevproject
 .Python
 .DS_Store
+coverage.xml
 pip-selfcheck.json
+nosetests.xml
 *.pyc
 *.pyo
 *.o
@@ -13,20 +16,18 @@ pip-selfcheck.json
 *.swp
 *.egg
 *.egg-info/
-nosetests.xml
-conf/*.py
-include
-lib/python*
-logs/*.log
-logs/*.log.*
 bin
 build
+conf/*.py
 dist
 images/*
 !images/test_images
 images/test_images/.DS_Store
-images/test_images/pdftest.pdf.d
-.coverage
+images/test_images/*.d
+include
+lib/python*
+logs/*.log
+logs/*.log.*
 src/coverage.xml
 src/flake8.txt
 .#*
