--- a/deploy/docker/ci-build-rhel-7/Dockerfile
+++ b/deploy/docker/ci-build-rhel-7/Dockerfile
@@ -2,7 +2,7 @@
 #
 # RHEL build and testing environment.
 #
-FROM registry.access.redhat.com/rhel7/rhel:7.4 AS registered_system
+FROM registry.access.redhat.com/rhel7:7.5 AS registered_system
 
 # RH subscription variables. Pass these in as build arguments.
 ARG RH_SUBS_USER
@@ -41,7 +41,8 @@ ARG IM_VERSION=6.9.9-25
 ARG AUTHORIZED_KEY
 
 # Add extra o/s tools
-RUN yum install -y sudo curl wget man git make gcc gcc-c++ sed mlocate \
+RUN yum install -y sudo curl wget man git make gcc gcc-c++ sed mlocate tar zip unzip which \
+                   java-1.8.0-openjdk-headless \
                    postgresql-devel openldap-devel openssl-devel libmemcached-devel \
                    python35u-devel python35u-pip \
                    openssh-server openssh-clients && \
