--- a/deploy/ubuntu16/httpd.conf.sample
+++ b/deploy/ubuntu16/httpd.conf.sample
@@ -29,7 +29,7 @@
     # Set the number of processes and threads as per the scalability required
     WSGIApplicationGroup qis
     WSGIProcessGroup qis
-    WSGIDaemonProcess qis user=qis group=www-data processes=2 threads=15 python-path=/opt/qis/src:/opt/qis/lib/python3.5/site-packages:/opt/qis/lib64/python3.5/site-packages
+    WSGIDaemonProcess qis user=qis group=www-data processes=2 threads=15 python-home=/opt/qis python-path=/opt/qis/src
 
     # Preload the code to reduce the delay at startup
     WSGIImportScript /opt/qis/src/wsgi/runserver.wsgi process-group=qis application-group=qis
