--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,7 @@
 .Python
 .DS_Store
 .vscode
-coverage.xml
 pip-selfcheck.json
-nosetests.xml
 *.pyc
 *.pyo
 *.o
@@ -33,7 +31,7 @@ logs/*.log
 logs/*.log.*
 src/coverage.xml
 src/flake8.txt
+src/junit.xml
 .#*
 #*
 *~
-
