--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -6,7 +6,7 @@ python-ldap==3.1.0
 pylibmc==1.5.2
 psycopg2==2.7.5
 SQLAlchemy==1.2.8
-requests==2.19.0
+requests>=2.20,<3
 psutil==5.4.6
 markdown==2.6.11
 
