--- a/deploy/docker/docker-compose.yml
+++ b/deploy/docker/docker-compose.yml
@@ -53,6 +53,8 @@ services:
       - HOSTNAME=$QIS_HOSTNAME
       - DB_USER=qis
       - DB_PASSWORD=qisdbpass
+      - HTTP_PROCESSES=2
+      - HTTPS_PROCESSES=2
     depends_on:
       - qis_cache
       - qis_db
