--- a/deploy/centos7/httpd.conf.sample
+++ b/deploy/centos7/httpd.conf.sample
@@ -16,6 +16,7 @@
 
     # Allow other domains to query the data API (required for canvas/zoom image viewer)
     Header set Access-Control-Allow-Origin "*"
+    Header set Access-Control-Allow-Headers "Authorization, If-None-Match, Cache-Control, X-Requested-With"
     # Allow other domains to see the returned image headers
     Header set Access-Control-Expose-Headers "Content-Length, X-From-Cache, X-Time-Taken"
 
