--- a/deploy/centos6/httpd.conf.sample
+++ b/deploy/centos6/httpd.conf.sample
@@ -6,10 +6,10 @@
     # Production host name aliases
     # ServerAlias images
 
-    # Request: host, time, requested path
+    # Request: host/proxy, host (if proxy), time, requested path
     # Response: status code, content length, microseconds (in app), microseconds (in total), image from cache
     # Extra: browser/agent, web page or request origin
-    LogFormat "%h %t \"%r\" %>s %B %{X-Time-Taken}o %D %{X-From-Cache}o \"%{User-Agent}i\" \"%{Referer}i\"" imaging
+    LogFormat "%h %{X-Forwarded-For}i %t \"%r\" %>s %B %{X-Time-Taken}o %D %{X-From-Cache}o \"%{User-Agent}i\" \"%{Referer}i\"" imaging
 
     # Log requests, or append "env=DISABLED" to disable logging
     CustomLog /var/log/httpd/qis_access_log imaging
