Add .well-known directory and URL mapping
For use with Let's Encrypt and DNT policies

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,6 +9,7 @@ prune images/test*
 graft licences
 include logs/README
 recursive-include src/imageserver *.css *.js *.png *.gif *.bmp *.ico *.jpg *.jpeg *.svg *.sass *.scss *.html *.htm *.txt *.sh
+recursive-include src/imageserver/static/.well-known *
 recursive-include src/wsgi *
 prune src/*.egg-info
 include README.md
